--- a/.github/workflows/compilation.yaml
+++ b/.github/workflows/compilation.yaml
@@ -17,14 +17,7 @@ jobs:
 
       # Run
       - name: Run make
-        run: make client &> /tmp/client_compilation
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: client_compilation_output
-          path: /tmp/client_compilation
+        run: make client
 
   server:
     runs-on: ubuntu-20.04
@@ -36,11 +29,4 @@ jobs:
 
     # Run
     - name: Run make
-      run: make server &> /tmp/server_compilation
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      if: always()
-      with:
-        name: server_compilation_output
-        path: /tmp/server_compilation
+      run: make server
