fix(lib/socket): fix sources

--- a/libs/socket/Makefile
+++ b/libs/socket/Makefile
@@ -10,6 +10,7 @@ DSRC	= ./src/
 SRC_FILES = socket_client_hostname_connect.c	\
 			socket_client_ip_connect.c			\
 			socket_close.c						\
+			debug_socket.c						\
 			fd_getline.c						\
 			fd_getline_delim.c					\
 			fd_read.c							\
